having issues getting back json for timeslots due to start_time format

--- a/app/views/timeslot/index.html.erb
+++ b/app/views/timeslot/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Hello World </h1>
 <% @timeslots.each do |timeslot| %>
-<%= timeslot.start_time -%>
-<%= timeslot.availability -%>
-<%= timeslot.duration -%>
-<%= timeslot.customer_count -%>
+<p> start time <%= timeslot.start_time %></p><br>
+<p> availability <%= timeslot.availability %></p><br>
+<p> duration <%= timeslot.duration %></p><br>
+<p> customer count <%= timeslot.customer_count %></p><br>
 <% end %>
